meeting link add to slot
